sonarcloud warning removed