@@ -10,6 +10,6 @@ import static org.knowm.xchange.currency.CurrencyPair.*;
 
 @UtilityClass
 public class CurrencyPairUtils {
-    public static final List<CurrencyPair> CurrencyPairs = Arrays.asList(BTC_USDT, ETH_BTC, DASH_USDT);
+    public static final List<CurrencyPair> CurrencyPairs = List.of(BTC_USDT, ETH_BTC, DASH_USDT);
 
 }
